erDiagram
    USERS ||--|| USER_PROFILES : "1:1"
    USERS ||--o{ PUBLICACIONES : "1:N"
    USERS ||--o{ RESTAURANT_STAFF : "N:M"
    RESTAURANTS ||--o{ RESTAURANT_STAFF : "N:M"
    RESTAURANTS ||--o{ RESTAURANT_AMENITIES : "N:M"
    AMENITIES ||--o{ RESTAURANT_AMENITIES : "N:M"

    USERS {
        uuid id PK
        varchar name
        varchar email UK
        user_role role FK
    }

    USER_PROFILES {
        uuid user_id PK
        text bio
        varchar avatar_url
        jsonb preferences
    }

    PUBLICACIONES {
        uuid id PK
        uuid user_id FK
        varchar title
        text content
    }

    RESTAURANTS {
        uuid id PK
        varchar name
        varchar address
    }

    RESTAURANT_STAFF {
        uuid id PK
        uuid restaurant_id FK
        uuid user_id FK
    }

    AMENITIES {
        uuid id PK
        varchar name UK
        text description
    }

    RESTAURANT_AMENITIES {
        uuid restaurant_id PK
        uuid amenity_id PK
        timestamptz linked_at
    }
